--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,13 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v13:24.2.1'
     compile 'com.zhy:okhttputils:2.6.2'
-    compile project(':umeng_library')
     compile project(':pull-to-refresh-library')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.hejunlin.superindicatorlibray:superindicatorlibray:1.0.3'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
 }
