--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v13:24.2.1'
     compile 'com.zhy:okhttputils:2.6.2'
-    compile project(':umeng_library')
+    /*compile project(':umeng_library')*/
     compile project(':pull-to-refresh-library')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
@@ -47,6 +47,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
-    compile project(':easeui')
+   /* compile project(':easeui')*/
 //    compile 'org.xutils:xutils:3.3.36'
 }
