--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,6 +109,7 @@
         </activity>
         <activity android:name=".activity.OEMProductActivity">
         </activity>
+        <activity android:name=".activity.OEMAddActivity"/>
     </application>
 
 </manifest>
