--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     /* compile project(':easeui')*/
     //    compile 'org.xutils:xutils:3.3.36'
-    compile project(':easeui')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
