--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
@@ -19,7 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions {
+    lintOptions{
         abortOnError false
         checkReleaseBuilds false
         disable 'MissingTranslation'
@@ -31,13 +31,12 @@ dependencies {
     //    compile 'com.android.support:appcompat-v7:24.2.1'
     //    compile 'com.android.support:support-v4:24.2.1'
     //    compile 'com.android.support:support-v13:24.2.1'
-    //    compile project(':umeng_library')
+        compile project(':umeng_library')
     compile project(':pull-to-refresh-library')
     //    compile 'com.github.bumptech.glide:glide:3.7.0'
     /* compile project(':easeui')*/
     //    compile 'org.xutils:xutils:3.3.36'
     compile 'com.github.hackware1993:MagicIndicator:1.4.0'
-    compile project(':easeui')
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
@@ -46,12 +45,13 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.hejunlin.superindicatorlibray:superindicatorlibray:1.0.3'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:support-vector-drawable:24.2.1'
-    testCompile 'junit:junit:4.12'
+    /* compile project(':easeui')*/
+    //    compile 'org.xutils:xutils:3.3.36'
+    compile project(':easeui')
+    //左滑删除列表
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 }
