--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,1 @@
-include ':app', ':pull-to-refresh-library', ':umeng_library'
-include ':city-selector'
-include ':easeui'
-include ':app', ':pull-to-refresh-library', ':umeng_library'
+include ':app', ':pull-to-refresh-library' ,':easeui',':umeng_library'
