--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,7 @@
         </activity>
         <activity android:name=".activity.OEMAddActivity"/>
         <activity android:name=".fragment.PlateDetailsActivity"></activity>
+        <activity android:name=".activity.PublishBBSActivity"></activity>
     </application>
 
 </manifest>
