--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,19 +19,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions{
+    lintOptions {
         abortOnError false
         checkReleaseBuilds false
         disable 'MissingTranslation'
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //    compile 'com.android.support:appcompat-v7:24.2.1'
     //    compile 'com.android.support:support-v4:24.2.1'
     //    compile 'com.android.support:support-v13:24.2.1'
-        compile project(':umeng_library')
+    compile project(':umeng_library')
     compile project(':pull-to-refresh-library')
     //    compile 'com.github.bumptech.glide:glide:3.7.0'
     /* compile project(':easeui')*/
@@ -54,4 +59,6 @@ dependencies {
     compile project(':easeui')
     //左滑删除列表
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile name:'SMSSDK-2.1.2', ext:'aar'
+    testCompile 'junit:junit:4.12'
 }
