重新创建weiwei分支，加上底部导航阴影

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':pull-to-refresh-library' ,':easeui',':umeng_library'
+include ':app', ':pull-to-refresh-library', ':umeng_library', ':easeui'
