--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '24.0.3'
 
     defaultConfig {
         applicationId "com.ddgj.dd"
@@ -67,6 +67,7 @@ dependencies {
     compile project(':easeui')
     //左滑删除列表
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
-    compile name:'SMSSDK-2.1.2', ext:'aar'
+    compile name: 'SMSSDK-2.1.2', ext: 'aar'
     testCompile 'junit:junit:4.12'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
 }
