weiwei图片放大，加入缓存

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -268,6 +268,8 @@
                   android:theme="@style/AppThemeLightStatuBar"/>
         <activity android:name=".activity.BBSCommentActivity"
                   android:theme="@style/AppThemeLightStatuBar"/>
+        <activity android:name=".activity.PhotoViewer"></activity>
+        <activity android:name=".activity.PhotoScale"></activity>
     </application>
 
 </manifest>
