--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,13 +61,13 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
+//    compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile project(':easeui')
     //左滑删除列表
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile name: 'SMSSDK-2.1.2', ext: 'aar'
     testCompile 'junit:junit:4.12'
-    compile 'com.squareup.okhttp:okhttp:2.2.0'
+//    compile 'com.squareup.okhttp:okhttp:2.2.0'
 //    compile 'com.android.support:appcompat-v7:24.2.1'
 }
