--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.ddgj.dd"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.ddgj.dd">
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -319,7 +319,17 @@
         </activity>
         <activity android:name=".activity.MineCustomActivity">
         </activity>
-        <activity android:name=".activity.OriginalityDetailActivity"></activity>
+        <activity android:name=".activity.OriginalityDetailActivity"/>
+        <activity android:name=".activity.PatentDetailActivity">
+        </activity>
+        <activity android:name=".activity.FactoryDetailActivity">
+        </activity>
+        <activity android:name=".activity.ProductDetailActivity">
+        </activity>
+        <activity android:name=".activity.OEMFactoryDetailActivity">
+        </activity>
+        <activity android:name=".activity.OEMProductDetailActivity">
+        </activity>
     </application>
 
 </manifest>
